# earth-rover

./: .gitignore  .gitmodules  API_COMPLIANCE_CHANGES.md  CMakeLists.txt  CONNECTION_GUIDE.md  DEEPGIS_TELEMETRY_README.md  LICENSE  Makefile  QUICK_START_TELEMETRY.md  README.md  earth-rover  earth-rover.repos  earth-rover.rviz  earth_rover.perspective  earth_rover_replay.perspective  package.xml
config/: adsb_state_vectors.rviz  deepgis_telemetry.yaml  earth_rover.perspective  landmark_vo_plot_2d.yaml  landmark_vo_plot_fisheye.yaml  mavros_config.yaml
docs/: ADS_B_ESTIMATOR_README.md  ADS_B_POSE_ESTIMATION_ANALYSIS.md  STATE_ESTIMATION_README.md
launch/: adsb.launch.py  adsb_aircraft_state_vectors.launch.py  adsb_aircraft_state_vectors_rviz.launch.py  adsb_state_vectors_plot_2d.launch.py  adsb_state_vectors_plot_glide.launch.py  deepgis_telemetry.launch.py  earth_rover.launch.py  earth_rover_system.launch.py  full_system.launch.py  landmark_vo_plot_2d.launch.py  landmark_vo_plot_fisheye.launch.py  radio_stack.launch.py  record_bag.launch.py  rtl_adsb.launch.py  rtl_sdr.launch.py  sdr.launch.py  vehicle_interface.launch.py
launch/mavros/: px4_pixhawk.launch
scripts/: adsb_state_vectors_plot_2d.py  adsb_state_vectors_plot_glide.py  adsb_state_vectors_to_rviz_node.py  analyze_spectrometer_rosbag.py  bayer_to_mono.py  check_landmark_vo_plot.sh  check_recording_topics.sh  cluster_spectrometer_rosbag.py  connect_pixhawk.sh  deepgis_gps_publisher.py  deepgis_rosbag_injector.py  deepgis_telemetry_publisher.py  geoplot_rosbag.py  landmark_vo_plot_2d.py  landmark_vo_plot_fisheye.py  orbslam3_right_rosbag.launch.py  record_Salient_topics.sh  record_cameras.sh  record_events_camera_spectra_distance.sh  run_orbslam3_right_rosbag.sh  sdr_adsb_common.py  setup_workspace.sh  test_gps_publisher.py
scripts/hotkeys/: README.md  _common.sh  install-gnome.sh  rosbag-start.sh  rosbag-stop.sh  status.sh  trike-start.sh  trike-stop.sh  uninstall-gnome.sh
scripts/hydra_sdr/: adsb_decoder_node.py  install_hydra_sdr.sh  sdr_visualizer.py  spectrum_analyzer_node.py
scripts/logs/: .gitignore
scripts/rtl_sdr/: install_rtl_sdr.sh  rtl_adsb_decoder_node.py
scripts/startup/: README.md  check_status.sh  earth-rover-kiosk.desktop  er-rsync-archive.service  er-rsync-archive.timer  firefox_kiosk.sh  install.sh  install_user_units.py  install_user_units.sh  launch_rover.sh  mission.yaml  ros-trike.desktop  ros-trike.service  ros_startup.sh  rsync_archive.sh  run_minimal_stack.sh  run_trike_stack.sh  stop_trike_stack.sh  vcs.tmuxp.yaml  vcs_down.sh  vcs_status.sh  vcs_up.sh
src/: vehicle_interface_node.cpp
vehicle_control_station/: README.md  env.example  manage.py
vehicle_control_station/management/scripts/: Houston_to_New_Orleans.html  trip-map.py
vehicle_control_station/templates/: home.html  mission.html
vehicle_control_station/vehicle_control_station/: asgi.py  mission_views.py  models.py  settings.py  urls.py  views.py  wsgi.py
vehicle_control_station/vehicle_control_station/static/vehicle-control-station/: vcs-app.js  vcs-styles.css
